--- a/index.html
+++ b/index.html
@@ -3,81 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Digital 2026 Ultimate</title>
+    <title>ልማት Hub | Full Mission Portal</title>
     <style>
-        :root { --blue: #003973; --yellow: #FFD700; --bg: #f8f9fa; --white: #ffffff; --green: #28a745; }
+        :root { --blue: #003973; --yellow: #FFD700; --bg: #f8f9fa; --white: #ffffff; }
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Arial, sans-serif; }
-        body { background: var(--bg); color: #333; line-height: 1.5; }
+        body { background: var(--bg); color: #333; line-height: 1.6; }
 
-        /* HEADER & NAV */
-        .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; text-align: center; font-size: 0.85rem; position: sticky; top: 0; z-index: 2000; }
-        nav { display: flex; justify-content: space-between; align-items: center; padding: 15px 8%; background: white; border-bottom: 1px solid #ddd; position: sticky; top: 41px; z-index: 1000; }
-        .logo { font-size: 24px; font-weight: bold; color: var(--blue); text-decoration: none; }
-        .nav-right { display: flex; gap: 15px; align-items: center; }
-        .lang-select { padding: 6px; border-radius: 5px; border: 1px solid #ccc; font-weight: bold; cursor: pointer; }
-        .join-btn { background: var(--yellow); color: var(--blue); padding: 10px 20px; border-radius: 50px; font-weight: bold; border: 2px solid var(--blue); text-decoration: none; box-shadow: 2px 2px 0px var(--blue); }
-
-        .container { max-width: 1100px; margin: 40px auto; padding: 0 5%; }
-
-        /* PORTAL & SEARCH */
-        .hero { background: var(--blue); color: white; padding: 50px 20px; border-radius: 20px; text-align: center; border: 4px solid var(--yellow); margin-bottom: 40px; position: relative; }
-        .id-input { width: 90%; max-width: 420px; padding: 16px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; }
-        .v-btn { background: var(--yellow); color: var(--blue); padding: 16px 45px; border: none; border-radius: 8px; font-weight: 800; cursor: pointer; text-transform: uppercase; }
+        /* ANNOUNCEMENT BAR */
+        .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; text-align: center; font-size: 0.9rem; position: sticky; top: 0; z-index: 2000; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
         
-        .search-container { margin-top: 20px; }
-        .search-bar { width: 100%; max-width: 500px; padding: 12px; border-radius: 30px; border: 1px solid #ddd; margin-bottom: 30px; outline: none; }
+        /* NAVIGATION */
+        nav { display: flex; justify-content: space-between; align-items: center; padding: 15px 8%; background: white; border-bottom: 1px solid #ddd; position: sticky; top: 43px; z-index: 1000; }
+        .logo { font-size: 26px; font-weight: bold; color: var(--blue); text-decoration: none; }
+        .nav-right { display: flex; gap: 20px; align-items: center; }
+        .lang-select { padding: 8px 12px; border-radius: 5px; border: 1px solid #ccc; font-weight: bold; cursor: pointer; background: #fff; }
+        .join-btn { background: var(--yellow); color: var(--blue); padding: 12px 25px; border-radius: 50px; font-weight: bold; border: 2px solid var(--blue); text-decoration: none; box-shadow: 3px 3px 0px var(--blue); }
 
-        /* ADVANCED STATS */
-        .stats { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 20px; margin-bottom: 50px; }
-        .stat-card { background: white; padding: 20px; border-radius: 12px; border-left: 6px solid var(--blue); box-shadow: 0 4px 6px rgba(0,0,0,0.05); text-align: left; }
-        .stat-card b { color: var(--blue); display: block; margin-bottom: 5px; }
-        .badge-live { display: inline-block; padding: 2px 8px; background: var(--green); color: white; border-radius: 4px; font-size: 0.7rem; margin-bottom: 10px; }
+        .container { max-width: 1200px; margin: 0 auto; padding: 60px 5%; }
 
-        /* TRACKS GRID */
-        .section-h { color: var(--blue); margin-bottom: 25px; border-left: 6px solid var(--yellow); padding-left: 15px; text-align: left; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 60px; }
-        .track { background: white; padding: 25px; border-radius: 15px; border-top: 5px solid var(--blue); text-align: left; border: 1px solid #eee; }
-        .track:hover { border-top-color: var(--yellow); transform: translateY(-5px); cursor: pointer; }
+        /* LARGE HERO PORTAL */
+        .hero { background: var(--blue); color: white; padding: 100px 40px; border-radius: 30px; text-align: center; border: 5px solid var(--yellow); margin-bottom: 80px; box-shadow: 0 20px 40px rgba(0,57,115,0.2); }
+        .hero h1 { font-size: 3rem; margin-bottom: 10px; }
+        .hero p { font-size: 1.2rem; opacity: 0.9; margin-bottom: 30px; }
+        .id-input { width: 100%; max-width: 500px; padding: 20px; border-radius: 12px; border: none; font-size: 1.2rem; text-align: center; margin-bottom: 20px; color: #111; }
+        .v-btn { background: var(--yellow); color: var(--blue); padding: 20px 60px; border: none; border-radius: 12px; font-weight: 900; cursor: pointer; text-transform: uppercase; font-size: 1.1rem; }
 
-        /* FAQ & SUPPORT */
-        .faq-box { background: white; padding: 40px; border-radius: 20px; text-align: left; border: 1px solid #ddd; margin-bottom: 60px; }
-        .support-bubble { position: fixed; bottom: 20px; right: 20px; background: var(--blue); color: white; padding: 15px 25px; border-radius: 50px; font-weight: bold; box-shadow: 0 5px 15px rgba(0,0,0,0.2); cursor: pointer; z-index: 3000; border: 2px solid var(--yellow); }
+        /* STUDENT DASHBOARD PREVIEW */
+        .dash-row { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; margin-bottom: 80px; }
+        .dash-card { background: white; padding: 40px; border-radius: 20px; border-left: 8px solid var(--blue); box-shadow: 0 10px 30px rgba(0,0,0,0.05); }
+        .badge { background: #28a745; color: white; padding: 5px 12px; border-radius: 5px; font-size: 0.75rem; font-weight: bold; margin-bottom: 15px; display: inline-block; }
 
-        /* FOOTER */
-        footer { background: #111; color: white; padding: 60px 8% 40px; }
-        .f-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 40px; text-align: left; }
-        .f-col h4 { color: var(--yellow); margin-bottom: 20px; font-size: 0.9rem; }
-        .f-bottom { border-top: 1px solid #333; margin-top: 40px; padding-top: 20px; text-align: center; color: #777; font-size: 0.8rem; }
-    </style>
-</head>
-<body>
+        /* TRACKS SECTION */
+        .section-header { text-align: left; margin-bottom: 40px; border-left: 8px solid var(--yellow); padding-left: 20px; }
+        .section-header h2 { font-size: 2.2rem; color: var(--blue); }
+        
+        .tracks-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 25px; margin-bottom: 100px; }
+        .track-item { background: white; padding: 35px 25px; border-radius: 20px; border: 1px solid #eee; border-top: 6px solid var(--blue); transition: 0.3s; }
+        .track-item:hover { transform: translateY(-10px); border-top-color: var(--yellow); box-shadow: 0 15px 30px rgba(0,0,0,0.1); }
+        .track-item b { font-size: 1.3rem; color: var(--blue); display: block; margin-bottom: 10px; }
 
-<div class="ticker" id="tk">ENROLLMENT OPEN: DIGITAL ETHIOPIA 2026 STRATEGY • VERIFIED BY FAYDA ID</div>
-
-<nav>
-    <a href="#" class="logo">ልማት Hub</a>
-    <div class="nav-right">
-        <select class="lang-select" onchange="upd(this.value)">
-            <option value="en">English</option>
-            <option value="am">አማርኛ</option>
-            <option value="om">Afaan Oromoo</option>
-        </select>
-        <a href="#" class="join-btn" id="jb">JOIN NOW</a>
-    </div>
-</nav>
-
-<div class="container">
-    <div class="hero">
-        <h1 id="ht">Ethiopia's 2026 Digital Mission</h1>
-        <p id="hs">National ID Verification Portal</p>
-        <input type="number" class="id-input" id="id-pl" placeholder="Enter Fayda ID to access dashboard">
-        <br>
-        <button class="v-btn" id="vb">VERIFY & ENTER</button>
-    </div>
-
-    <div class="stats">
-        <div class="stat-card">
-            <span class="badge-live">LIVE</span>
-            <b id="o1">Learning Streak</b>
-            <p id="o1s">0 Days (Verify to Start)</p>
-        </div>
+        /* FAQ */
+        .faq-section { background: white; padding: 60px; border-radius: 30px
