--- a/index.html
+++ b/index.html
@@ -43,4 +43,156 @@
         .track-item b { font-size: 1.3rem; color: var(--blue); display: block; margin-bottom: 10px; }
 
         /* FAQ */
-        .faq-section { background: white; padding: 60px; border-radius: 30px
+        .faq-section { background: white; padding: 60px; border-radius: 30px; border: 1px solid #ddd; margin-bottom: 100px; }
+        .faq-q { margin-bottom: 40px; padding-bottom: 20px; border-bottom: 1px solid #eee; }
+        .faq-q h3 { color: var(--blue); margin-bottom: 15px; font-size: 1.4rem; }
+
+        /* FOOTER */
+        footer { background: #0a0a0a; color: #fff; padding: 100px 8% 50px; border-top: 8px solid var(--yellow); }
+        .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 60px; }
+        .footer-col h4 { color: var(--yellow); margin-bottom: 30px; text-transform: uppercase; letter-spacing: 2px; }
+        .footer-col p { color: #999; margin-bottom: 15px; font-size: 0.95rem; }
+        .footer-bottom { border-top: 1px solid #222; margin-top: 60px; padding-top: 40px; text-align: center; color: #555; font-size: 0.85rem; }
+    </style>
+</head>
+<body>
+
+<div class="ticker" id="tk">ENROLLMENT OPEN: DIGITAL ETHIOPIA 2026 STRATEGY • VERIFIED BY FAYDA ID</div>
+
+<nav>
+    <a href="#" class="logo">ልማት Hub</a>
+    <div class="nav-right">
+        <select class="lang-select" onchange="translatePage(this.value)">
+            <option value="en">English</option>
+            <option value="am">አማርኛ</option>
+            <option value="om">Afaan Oromoo</option>
+        </select>
+        <a href="#" class="join-btn" id="jb">JOIN NOW</a>
+    </div>
+</nav>
+
+<div class="container">
+    <div class="hero">
+        <h1 id="ht">Ethiopia's 2026 Digital Mission</h1>
+        <p id="hs">National ID Verification Portal</p>
+        <input type="number" class="id-input" id="id-pl" placeholder="Enter Fayda ID to access dashboard">
+        <br>
+        <button class="v-btn" id="vb">VERIFY & ENTER</button>
+    </div>
+
+    <div class="dash-row">
+        <div class="dash-card">
+            <span class="badge" id="b1">LIVE STATUS</span>
+            <h4 id="o1">Learning Streak</h4>
+            <p id="o1s">0 Days (Enter ID to begin mission)</p>
+        </div>
+        <div class="dash-card">
+            <span class="badge" id="b2" style="background:var(--blue)">OFFICIAL</span>
+            <h4 id="o2">Certifications</h4>
+            <p id="o2s">Locked until Fayda ID is verified</p>
+        </div>
+    </div>
+
+    <div class="section-header">
+        <h2 id="th">Official Specializations (10 Tracks)</h2>
+    </div>
+    <div class="tracks-grid" id="track-list">
+        </div>
+
+    <div class="faq-section">
+        <div class="section-header"><h2 id="fh">Frequently Asked Questions</h2></div>
+        <div id="faq-list"></div>
+    </div>
+</div>
+
+<footer>
+    <div class="footer-grid">
+        <div class="footer-col">
+            <h4>ልማት Hub</h4>
+            <p id="fa">Building the tech workforce of 2026. Empowering every citizen through digital literacy and advanced AI engineering.</p>
+        </div>
+        <div class="footer-col">
+            <h4 id="flk">Mission Resources</h4>
+            <p>Strategy 2026 Documentation</p>
+            <p>Fayda ID Integration Guide</p>
+            <p>Curriculum Overview</p>
+        </div>
+        <div class="footer-col">
+            <h4 id="fc">Headquarters</h4>
+            <p>Addis Ababa, Ethiopia</p>
+            <p>Email: contact@lemathub.et</p>
+            <p>Support: +251 900 000 000</p>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>© 2026 ልማት Hub | Official Fayda National ID Partner</p>
+        <p style="margin-top:10px; opacity:0.6;">Empowering Ethiopia's Digital Transformation</p>
+    </div>
+</footer>
+
+<script>
+    const translations = {
+        en: {
+            tk: "MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA ID", jb: "JOIN NOW",
+            ht: "Ethiopia's 2026 Digital Mission", hs: "National ID Verification Portal",
+            id: "Enter Fayda ID to access dashboard", vb: "VERIFY & ENTER",
+            o1: "Learning Streak", o1s: "0 Days (Enter ID to begin)",
+            o2: "Certifications", o2s: "Locked until ID Verification",
+            th: "Official Specializations (10 Tracks)", fh: "Frequently Asked Questions",
+            fa: "Building the tech workforce of 2026 for a digital Ethiopia.",
+            tr: ["AI Engineering", "Cyber Security", "Full-Stack Web", "Data Science", "Cloud DevOps", "Mobile Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"],
+            faq: [
+                {q: "Is this program free?", a: "Yes, all mission tracks are fully funded for verified citizens."},
+                {q: "Is Fayda ID mandatory?", a: "Yes, all certifications are legally linked to your National ID."}
+            ]
+        },
+        am: {
+            tk: "ተልዕኮ 2026፡ ምዝገባ ተከፍቷል • በፋይዳ መታወቂያ የተረጋገጠ", jb: "አሁን ይቀላቀሉ",
+            ht: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", hs: "የብሔራዊ መታወቂያ ማረጋገጫ ፖርታል",
+            id: "ዳሽቦርድ ለመድረስ የፋይዳ መታወቂያ ያስገቡ", vb: "አረጋግጥ እና ግባ",
+            o1: "የትምህርት ሂደት", o1s: "0 ቀናት (ለመጀመር መታወቂያ ያስገቡ)",
+            o2: "የምስክር ወረቀቶች", o2s: "በመታወቂያ የተቆለፈ",
+            th: "ኦፊሴላዊ የሥልጠና ዘርፎች (10 ትራኮች)", fh: "ተደጋጋሚ ጥያቄዎች",
+            fa: "ለዲጂታል ኢትዮጵያ የ2026 የቴክኖሎጂ የሰው ኃይል መገንባት።",
+            tr: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "ሙሉ የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ ዴቭኦፕስ", "የሞባይል መተግበሪያ", "ብሎክቼይን", "ዩአይ/ዩኤክስ ዲዛይን", "አይኦቲ ሲስተምስ", "ፊንቴክ"],
+            faq: [
+                {q: "ይህ ፕሮግራም ነፃ ነው?", a: "አዎ፣ ሁሉም የ2026 ተልዕኮ ትራኮች ለተረጋገጡ ዜጎች በነፃ የቀረቡ ናቸው።"},
+                {q: "መታወቂያ ያስፈልጋል?", a: "አዎ፣ ለብሔራዊ የምስክር ወረቀት ትክክለኛ የፋይዳ መታወቂያ ግዴታ ነው።"}
+            ]
+        },
+        om: {
+            tk: "ERGA 2026: GALMEEN BANAMEERA • FAYDA ID'N MIRKANAAYE", jb: "AMMA SEENI",
+            ht: "Ergaa Diigitalaa Itoophiyaa 2026", hs: "Waraqaa Eenyummaa Mirkaneessuuf",
+            id: "Koodii Fayda galchaa", vb: "MIRKANEESSI & SEENI",
+            o1: "Adeemsa Leenjii", o1s: "Guyyaa 0 (ID Galchaa)",
+            o2: "Waraqaa Ragaa", o2s: "Fayda ID'n cufameera",
+            th: "Leenjiiwwan Ofisiyawaa (10)", fh: "Gaaffiiwwan Yeroo Baay'ee Gaafataman",
+            fa: "Humni namaa teeknooloojii 2026 Itoophiyaa diigitalaaf ijaaruuf.",
+            tr: ["AI Injiinariingii", "Cyber Security", "Full-Stack Web", "Data Science", "Cloud DevOps", "Mobile Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"],
+            faq: [
+                {q: "Leenjiin kun bilisaa?", a: "Eeyyee, track'n hundi lammilee mirkanaa'aniif kaffalameera።"},
+                {q: "Fayda ID'n ni barbaachisaa?", a: "Eeyyee, waraqaa ragaa argachuuf Fayda ID'n dirqama።"}
+            ]
+        }
+    };
+
+    function translatePage(l) {
+        const c = translations[l];
+        document.getElementById('tk').innerText = c.tk; document.getElementById('jb').innerText = c.jb;
+        document.getElementById('ht').innerText = c.ht; document.getElementById('hs').innerText = c.hs;
+        document.getElementById('id-pl').placeholder = c.id; document.getElementById('vb').innerText = c.vb;
+        document.getElementById('o1').innerText = c.o1; document.getElementById('o1s').innerText = c.o1s;
+        document.getElementById('o2').innerText = c.o2; document.getElementById('o2s').innerText = c.o2s;
+        document.getElementById('th').innerText = c.th; document.getElementById('fh').innerText = c.fh;
+        document.getElementById('fa').innerText = c.fa;
+
+        const g = document.getElementById('track-list'); g.innerHTML = "";
+        c.tr.forEach(t => { g.innerHTML += `<div class="track-item"><b>${t}</b><p>Specialized Mission Track</p></div>`; });
+
+        const f = document.getElementById('faq-list'); f.innerHTML = "";
+        c.faq.forEach(q => { f.innerHTML += `<div class="faq-q"><h3>${q.q}</h3><p>${q.a}</p></div>`; });
+    }
+    translatePage('en');
+</script>
+</body>
+</html>
